Thu Sep  2 12:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* NSWorkspace.m: Fixes for locating icons in application resources.
	* NSBundleAdditions.m: implemented ([-pathForImageresource:])

Thu Sep  2  9:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* NSWorkspace.m: Attempted fix for locateApplicationBinary and tidied.
	Modified fix for getting file icons of directories where the extension
	is meaningless.  Look for .dir.tiff as well.

Wed Sep  1  9:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	Added patches from n.pero@mi.flashnet.it to access ivars of
	superclasses directly.  Generated changes for NSClipView.m myself.
	* NSBox.m: (frame)
	* NSClipView.m: (superview, window, bounds)
	* NSMatrix.m: (bounds)
	* NSMenuView.m: (frame, window, bounds)
	* NSPopUpButton.m: (frame, window)
	* NSProgressIndicator   (window, bounds)
	* NSSavePanel.m: (frame)
	* NSScroller.m: (frame)
	* NSScrollView.m: (bounds)
	* NSSlider.m: (bounds)
	* NSSplitView.m: (frame, window, bounds)
	* NSTabView.m: (frame)
	* NSTableView.m: (superview)
	* NSView.m: (superview, autoresizeSubviews)

Wed Sep  1  9:28:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

        * Tools/GNUmakefile.preamble: patch by doko@cs.tu-berlin.de so that
        make_services is linked without the gste-gui library.
	* Tools/make_services.m: minor fixes to get rid of some compiler
	warnings - remove unused variables etc.

Wed Sep  1  9:17:00 1999  n.pero@mi.flashnet.it
	* Source/NSBox.m: (-initWithFrame:) changed default border type to 
	NSGrooveBorder (as in MacOS-X).  Resize content view to fit the box. 
	Turn off autoresizing of subviews. 
	(-setContentViewMargins:) removed the code which resized the content 
	view (as required by MacOS-X specs). 
	(-setFrame:) added method.  It resizes also the content view when 
	the box is resized, as required by MacOS-X specs. 
	(-setFrameSize:) idem. 